--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,7 @@
 body {
-  margin: 0;
+  font-size: 18px;
+  line-height: 1.5;
+  color: #302182;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  background-color: white;
 }
