--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,12 +1,18 @@
 <input type="search" ng-model="searchTerm" placeholder="Search">
 
-<div ng-repeat="category in categories">
-  <h2>{{ category[0].category }}</h2>
-  <ul ng-repeat="question in category | filter:searchTerm track by question.id">
-    <li>
-      <a ui-sref="question({id: question.id})">
-        {{ question.title }}
-      </a>
-    </li>
-  </ul>
-</div>
+<section ng-show="categories">
+  <div ng-repeat="category in categories">
+    <h2>{{ category[0].category }}</h2>
+    <ul class="fly" ng-repeat="question in category | filter:searchTerm track by question.id">
+      <li>
+        <a ui-sref="question({id: question.id})">
+          {{ question.title }}
+        </a>
+      </li>
+    </ul>
+  </div>
+</section>
+
+<section ng-hide="categories">
+  Loading...
+</section>
