feat(styles): apply basic styling

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,4 +1,4 @@
-<input type="search" ng-model="searchTerm" placeholder="Search">
+<input id="search" type="search" ng-model="searchTerm" placeholder="Search">
 
 <section ng-show="categories">
   <div ng-repeat="category in categories">
