--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,6 +6,18 @@ body {
   background-color: white;
 }
 
+@font-face {
+  font-family: Bariol Bold;
+  src: url(fonts/bariol_bold-webfont.eot) format(eot);
+  src: url(fonts/bariol_bold-webfont.woff) format(woff);
+  font-weight: normal;
+  font-style: normal;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: Bariol Bold, sans-serif;
+}
+
 .fly.ng-enter {
   transition: 200ms ease-in all;
   opacity: 0;
@@ -26,4 +38,66 @@ body {
 
 .fly.ng-leave-active {
   opacity: 0;
+}
+
+a {
+  color: #302182;
+  font-weight: bold;
+}
+
+main {
+  box-sizing: border-box;
+  padding: 20px;
+  width: 600px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+header {
+  text-align: center;
+}
+
+header h1 {
+  font-size: 45px;
+}
+
+header a {
+  text-decoration: none;
+}
+
+header img {
+  display: block;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+#search {
+  display: block;
+  box-sizing: border-box;
+  margin: 0 20px;
+  max-width: 100%;
+  border-radius: 5px;
+  padding: 6px 20px;
+  line-height: normal;
+  font-size: 1em;
+  width: 100%;
+  width: calc(100% - 40px);
+  height: 64px;
+  border: none;
+  text-transform: uppercase;
+  background: #eee;
+}
+
+#search:focus {
+  background: #302182;
+  color: #fff;
+  outline: none;
+}
+
+section {
+  margin: 80px 0;
+}
+
+footer {
+  text-align: center;
 }
