--- a/app/views/question.html
+++ b/app/views/question.html
@@ -4,7 +4,7 @@
   <p ng-if="isOutDated(question)"><em>
     This question wasn't updated in a month.
     If in doubt visit us on <a href="http://hood.ie/irc.html">IRC</a> or ping us
-    on Twitter (<a href="http://twitter.com/hoodiehq">@hoodiqhq</a>).
+    on Twitter (<a href="http://twitter.com/hoodiehq">@hoodiehq</a>).
   </em></p>
   <p>
     <a ng-href="{{ question.url }}">Improve this answer</a>
