--- a/app/views/question.html
+++ b/app/views/question.html
@@ -4,7 +4,7 @@
       Frequently Asked Questions
     </a>
   </h1>
-  <section class="question cb" ng-show="question.id">
+  <section class="fly question cb" ng-show="question.id">
     <h2>{{ question.title }}</h2>
     <p ng-bind-html="question.answer"></p>
     <p ng-if="isOutDated(question)" class="note"><em>
