fix(images): change img to images path to follow gruntfile convention

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -169,9 +169,9 @@ article figure figcaption {
   background-color: #b3b3b3; }
 
 .orange #content {
-  background: url('../img/logo_cut.png') no-repeat center 3.5rem; }
+  background: url('../images/logo_cut.png') no-repeat center 3.5rem; }
 .orange footer {
-  background: url('../img/logo_cut_negativ.png') no-repeat center 0; }
+  background: url('../images/logo_cut_negativ.png') no-repeat center 0; }
 .orange h1, .orange h2, .orange h4, .orange a {
   color: #e94e1b; }
 .orange #nav, .orange #footer {
@@ -182,9 +182,9 @@ article figure figcaption {
   background-color: #f9c4b3; }
 
 .blue #content {
-  background: url('../img/logo_cut_blue.png') no-repeat center 3.5rem; }
+  background: url('../images/logo_cut_blue.png') no-repeat center 3.5rem; }
 .blue footer {
-  background: url('../img/logo_cut_negativ_blue.png') no-repeat center 0; }
+  background: url('../images/logo_cut_negativ_blue.png') no-repeat center 0; }
 .blue h1, .blue h2, .blue h4, .blue a {
   color: #312783; }
 .blue #nav, .blue #footer {
@@ -195,9 +195,9 @@ article figure figcaption {
   background-color: #bfbcd8; }
 
 .green #content {
-  background: url('../img/logo_cut_green.png') no-repeat center 3.5rem; }
+  background: url('../images/logo_cut_green.png') no-repeat center 3.5rem; }
 .green footer {
-  background: url('../img/logo_cut_negativ_green.png') no-repeat center 0; }
+  background: url('../images/logo_cut_negativ_green.png') no-repeat center 0; }
 .green h1, .green h2, .green h4, .green a {
   color: #0b8e36; }
 .green #nav, .green #footer {
@@ -208,9 +208,9 @@ article figure figcaption {
   background-color: #a9d6b8; }
 
 .yellow #content {
-  background: url('../img/logo_cut_yellow.png') no-repeat center 3.5rem; }
+  background: url('../images/logo_cut_yellow.png') no-repeat center 3.5rem; }
 .yellow footer {
-  background: url('../img/logo_cut_negativ_yellow.png') no-repeat center 0; }
+  background: url('../images/logo_cut_negativ_yellow.png') no-repeat center 0; }
 .yellow h1, .yellow h2, .yellow h4, .yellow a {
   color: #f9b233; }
 .yellow #nav, .yellow #footer {
@@ -221,9 +221,9 @@ article figure figcaption {
   background-color: #fce3b6; }
 
 .gray #content {
-  background: url('../img/logo_cut_gray.png') no-repeat center 3.5rem; }
+  background: url('../images/logo_cut_gray.png') no-repeat center 3.5rem; }
 .gray footer {
-  background: url('../img/logo_cut_negativ_gray.png') no-repeat center 0; }
+  background: url('../images/logo_cut_negativ_gray.png') no-repeat center 0; }
 .gray h1, .gray h2, .gray h4, .gray a {
   color: #282828; }
 .gray #nav, .gray #footer {
@@ -234,9 +234,9 @@ article figure figcaption {
   background-color: #b3b3b3; }
 
 .lilac #content {
-  background: url('../img/logo_cut_lilac.png') no-repeat center 3.5rem; }
+  background: url('../images/logo_cut_lilac.png') no-repeat center 3.5rem; }
 .lilac footer {
-  background: url('../img/logo_cut_negativ_lilac.png') no-repeat center 0; }
+  background: url('../images/logo_cut_negativ_lilac.png') no-repeat center 0; }
 .lilac h1, .lilac h2, .lilac h4, .lilac a {
   color: #520644; }
 .lilac #nav, .lilac #footer {
