--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,16 +1,16 @@
-<div id="content">
-  <h1>
+<div class="content">
+  <h2>
     <a href="/" id="logo-animation">
       Frequently Asked Questions
     </a>
-  </h1>
+  </h2>
   <section class="cb">
-    <input id="search" type="search" ng-model="searchTerm" placeholder="Search">
+    <input id="search" type="search" ng-model="searchTerm" placeholder="How can we help you today?">
   </section>
 
   <section ng-show="categories" class="box">
     <div ng-repeat="category in categories" class="cb">
-      <h2>{{ category[0].category }}</h2>
+      <h4>{{ category[0].category }}</h4>
       <ul class="fly" ng-repeat="question in category | filter:searchTerm track by question.id">
         <li>
           <a ui-sref="question({id: question.id})">
