--- a/app/views/question.html
+++ b/app/views/question.html
@@ -1,19 +1,19 @@
-<div id="content">
-  <h1>
+<div class="content">
+  <h2>
     <a href="/" id="logo-animation">
-      Frequently Asked Questions
+      &#8592; Frequently Asked Questions
     </a>
-  </h1>
+  </h2>
   <section class="fly question cb" ng-show="question.id">
-    <h2>{{ question.title }}</h2>
+    <h4>{{ question.title }}</h4>
     <p ng-bind-html="question.answer"></p>
     <p ng-if="isOutDated(question)" class="note"><em>
       This question wasn't updated in a month.
-      If in doubt visit us on <a href="http://hood.ie/irc.html">IRC</a> or ping us
+      If in doubt visit us on <a href="http://hood.ie/chat/">IRC</a> or ping us
       on Twitter (<a href="http://twitter.com/hoodiehq">@hoodiehq</a>).
     </em></p>
     <p class="note">
-      <a class="btn" ng-href="{{ question.url }}">Improve this answer</a>
+      <a class="btn" ng-href="{{ question.url }}">Improve this answer &#8594; </a>
     </p>
   </section>
 
