attempt to fix the path issue with travis deployment

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'FiraMono';
-    src: url('font/FiraMono-Regular.eot');
-    src: url('font/FiraMono-Regular.eot?#iefix') format('embedded-opentype'),
-         url('font/FiraMono-Regular.woff') format('woff'),
-         url('font/FiraMono-Regular.ttf') format('truetype'),
-         url('font/FiraMono-Regular.svg#FiraSansMono') format('svg');
+    src: url('../images/font/FiraMono-Regular.eot');
+    src: url('../images/font/FiraMono-Regular.eot?#iefix') format('embedded-opentype'),
+         url('../images/font/FiraMono-Regular.woff') format('woff'),
+         url('../images/font/FiraMono-Regular.ttf') format('truetype'),
+         url('../images/font/FiraMono-Regular.svg#FiraSansMono') format('svg');
     font-weight: 300;
     font-style: normal;
 
