fix(accessibility): add hidden label for search field

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -19,6 +19,11 @@
   background-image: none;
 }
 
+.faq b {
+  position: absolute;
+  left: -999em;
+}
+
 .faq input#search {
   border: solid #CCC;
   border-width: 0 0 1px 0;
