--- a/app/views/index.html
+++ b/app/views/index.html
@@ -5,7 +5,8 @@
     </a>
   </h2>
   <section class="cb">
-    <input id="search" type="search" ng-model="searchTerm" placeholder="How can we help you today?">
+    <label for="search"><b>Search for an answer</b></label>
+    <input role="search" id="search" type="search" ng-model="searchTerm" placeholder="How can we help you today?">
   </section>
 
   <section ng-show="categories" class="box">
