--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div role="main" class="content">
   <h2>
     <a href="/" id="logo-animation">
       Frequently Asked Questions
