--- a/app/views/question.html
+++ b/app/views/question.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div role="main" class="content">
   <h2>
     <a href="/" id="logo-animation">
       &#8592; Frequently Asked Questions
