feat: update to latest angular

--- a/app/views/question.html
+++ b/app/views/question.html
@@ -1,6 +1,6 @@
 <div class="content">
   <h2>
-    <a href="/" id="logo-animation">
+    <a ui-sref="index" id="logo-animation">
       &#8592; Frequently Asked Questions
     </a>
   </h2>
