fix(question): exchange IRC with Chat

--- a/app/views/question.html
+++ b/app/views/question.html
@@ -9,7 +9,7 @@
     <p ng-bind-html="question.answer"></p>
     <p ng-if="isOutDated(question)" class="note"><em>
       This question hasn't been updated in a month.
-      If in doubt visit us on <a href="http://hood.ie/chat/">IRC</a> or ping us
+      If in doubt visit our <a href="http://hood.ie/chat/">chat</a> or ping us
       on Twitter (<a href="http://twitter.com/hoodiehq">@hoodiehq</a>).
     </em></p>
     <p class="note">
