--- a/app/views/question.html
+++ b/app/views/question.html
@@ -8,7 +8,7 @@
     <h4>{{ question.title }}</h4>
     <p ng-bind-html="question.answer"></p>
     <p ng-if="isOutDated(question)" class="note"><em>
-      This question hasn't been updated in a month.
+      This question hasn't been updated in three months.
       If in doubt visit our <a href="http://hood.ie/chat/">chat</a> or ping us
       on Twitter (<a href="http://twitter.com/hoodiehq">@hoodiehq</a>).
     </em></p>
